--- a/luminar.css
+++ b/luminar.css
@@ -7,7 +7,24 @@
 #i1{
     height:300px;
     width:550px;
+    
 }
 .card :hover{
     border: gray;
+}
+#l1{
+    padding-left: 1000px;
+}
+#a1:hover{
+    background-color: grey;
+    color:gray;
+    box-shadow: grey;
+}
+#a2:hover{
+    background-color: grey;
+    color:gray;
+    box-shadow: grey;
+}
+#o1:hover{
+    color: grey;
 }
